--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -62,22 +62,6 @@
                                     <span>Participantes</span>
                                 </a>
                             </li>
-                            <li id="participantPPermissions" hidden *ngIf="participant">
-                                <a class="dropdown-item" [routerLink]="['/participant', participant.id, 'view' ]"
-                                   routerLinkActive="active"
-                                   [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                                    <fa-icon icon="user" fixedWidth="true"></fa-icon>
-                                    <span>Mi perfil</span>
-                                </a>
-                            </li>
-                            <li id="institutionPPermissions" hidden *ngIf="institution">
-                                <a class="dropdown-item" [routerLink]="['/institution', institution.id, 'view' ]"
-                                   routerLinkActive="active"
-                                   [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                                    <fa-icon icon="user" fixedWidth="true"></fa-icon>
-                                    <span>Mi perfil</span>
-                                </a>
-                            </li>
                             <li id="calendarPermissions" hidden>
                                 <a class="dropdown-item" routerLink="user-app/activities" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
@@ -213,21 +197,37 @@
                     <!--User nav item-->
                     <li ngbDropdown class="nav-item dropdown pointer" placement="bottom-right" routerLinkActive="active"
                         [routerLinkActiveOptions]="{exact: true}">
-                        <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);">
+                        <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" (click)="findActualUser()">
                             <i class="ft-user font-medium-3 blue-grey darken-4"></i>
                             <!--Agregar class="d-none" para quitar el texto-->
                             <span class="">Configuraciones</span>
                         </a>
 
                         <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="account-menu">
-                            <li *ngSwitchCase="true">
+                            <li id="participantPPermissions" hidden *ngSwitchCase="true" >
+                                <a class="dropdown-item" *ngIf="participant" [routerLink]="['/participant', participant.id, 'view' ]"
+                                   routerLinkActive="active"
+                                   [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                                    <fa-icon icon="user" fixedWidth="true"></fa-icon>
+                                    <span>Mi perfil</span>
+                                </a>
+                            </li>
+                            <li id="institutionPPermissions" hidden *ngSwitchCase="true" >
+                                <a class="dropdown-item" *ngIf="institution" [routerLink]="['/institution', institution.id, 'view' ]"
+                                   routerLinkActive="active"
+                                   [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                                    <fa-icon icon="user" fixedWidth="true"></fa-icon>
+                                    <span>Mi perfil</span>
+                                </a>
+                            </li>
+                            <li id="configurationPermissions" hidden *ngSwitchCase="true">
                                 <a routerLink="settings" routerLinkActive="active" (click)="collapseNavbar()"
                                    class="dropdown-item py-1">
                                     <i class="ft-settings mr-2"></i>
                                     <span>Ajustes</span>
                                 </a>
                             </li>
-                            <li *ngSwitchCase="true">
+                            <li id="passwordResetPermissions" hidden *ngSwitchCase="true">
                                 <a routerLink="password" routerLinkActive="active" (click)="collapseNavbar()"
                                    class="dropdown-item py-1">
                                     <i class="ft-edit mr-2"></i>
