--- a/src/main/webapp/app/entities/institution/institution-detail.component.html
+++ b/src/main/webapp/app/entities/institution/institution-detail.component.html
@@ -14,7 +14,7 @@
                         </div>
                         <div class="col-2">
                             <div class="align-self-center halfway-fab text-center">
-                                    <img src="{{institution.logo}}" class="rounded-circle img-border gradient-summer width-100" alt="Card image">
+                                    <img style="height: 125px;" src="{{institution.logo}}" class="rounded-circle img-border gradient-summer width-100" alt="Card image">
                             </div>
                         </div>
                         <div class="col-5">
