--- a/src/main/webapp/app/account/activate/activate.component.html
+++ b/src/main/webapp/app/account/activate/activate.component.html
@@ -7,7 +7,7 @@
                     <button type="button" data-dismiss="alert" class="close" (click)="closeMe(successAlert)">×</button>
                     <span class="ft-check"></span> <strong>¡Felicidades!</strong>
                     <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
-                    <p>¡Su cuenta ha sido activada! Por favor <a class="alert-link" (click)="login()">inicie sesión. </a></p>
+                    <p>¡Su cuenta ha sido activada!</p>
                 </div>
             </div>
 
@@ -21,5 +21,31 @@
             </div>
 
         </div>
+    </div>
+</div>
+
+<div *ngIf="success">
+    <div class="jumbotron text-xs-center" style="margin-left: 30px; margin-right: 30px;">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 class="display-3">¡Éxito!</h1>
+        <p class="lead">Por favor <strong><a class="alert-link" (click)="login()">inicie sesión. </a></strong></p>
+        <hr>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 </div>
