--- a/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
+++ b/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
@@ -25,7 +25,7 @@
                     <button type="button" data-dismiss="alert" class="close" (click)="closeMeSuccess(successAlert)">×</button>
                     <span class="ft-check"></span> <strong>¡Felicidades!</strong>
                     <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
-                    <p>¡Su contraseña ha sido cambiada! Por favor <a class="alert-link" (click)="login()">inicie sesión. </a></p>
+                    <p>Cambio de contraseña realizado exitosamente.</p>
                 </div>
             </div>
 
@@ -120,5 +120,31 @@
             </div>
 
         </div>
+    </div>
+</div>
+
+<div *ngIf="success">
+    <div class="jumbotron text-xs-center" style="margin-left: 30px; margin-right: 30px;">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 class="display-3">¡Perfecto!</h1>
+        <p class="lead">Tu contraseña ha sido cambiada. Por favor <strong><a class="alert-link" (click)="login()">inicie sesión. </a></strong></p>
+        <hr>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 </div>
