--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
@@ -20,7 +20,7 @@
                     <span class="ft-check"></span> <strong>¡Felicidades!</strong>
                     <hr class="message-inner-separator"
                         style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
-                    <p>Revisa tu correo para instrucciones de cómo recuperar tu contraseña.</p>
+                    <p>Se ha enviado la confirmación a tu correo.</p>
                 </div>
             </div>
 
@@ -87,5 +87,31 @@
 
             </form>
         </div>
+    </div>
+</div>
+
+<div *ngIf="success">
+    <div class="jumbotron text-xs-center" style="margin-left: 30px; margin-right: 30px;">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 class="display-3">¡Perfecto!</h1>
+        <p class="lead"><strong>Revisa tu correo para instrucciones de cómo recuperar tu contraseña.</strong></p>
+        <hr>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 </div>
