--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -14,7 +14,7 @@
                         <button type="button" data-dismiss="alert" class="close" (click)="closeMeSuccess(successAlert)">×</button>
                         <span class="ft-check"></span> <strong>¡Felicidades!</strong>
                         <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
-                        <p>¡Su registro ha sido exitoso!<br> Por favor revise su correo para verificar su cuenta.</p>
+                        <p>¡Su registro ha sido exitoso!</p>
                     </div>
                 </div>
 
@@ -285,5 +285,31 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div *ngIf="success">
+    <div class="jumbotron text-xs-center" style="margin-left: 30px; margin-right: 30px;">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 class="display-3">¡Muchas gracias!</h1>
+        <p class="lead"><strong>Por favor revise su correo para verificar su cuenta.</strong></p>
+        <hr>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 </div>
