--- a/src/main/webapp/app/entities/participant/participant-create.component.html
+++ b/src/main/webapp/app/entities/participant/participant-create.component.html
@@ -7,7 +7,7 @@
                         <button type="button" data-dismiss="alert" class="close" (click)="closeMe(successAlert)">×</button>
                         <span class="ft-check"></span> <strong>¡Felicidades!</strong>
                         <hr class="message-inner-separator" style="background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));">
-                        <p>¡Su registro ha sido exitoso!<br> Por favor inicie sesión nuevamente.</p>
+                        <p>¡Su registro ha sido exitoso!</p>
                     </div>
                 </div>
             </div>
@@ -177,5 +177,31 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div *ngIf="success">
+    <div class="jumbotron text-xs-center" style="margin-left: 30px; margin-right: 30px;">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 class="display-3">¡Perfecto!</h1>
+        <p class="lead">Por favor <strong><a class="alert-link" (click)="login()">inicie sesión</a></strong> nuevamente.</p>
+        <hr>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 </div>
