focus group management fix

--- a/src/main/webapp/app/entities/focus-group/focus-group-management.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-management.component.html
@@ -63,11 +63,11 @@
         </div>
         <div class="row my-4 justify-content-between">
             <div class="input-group col-6">
-                <div class="input-group-prepend">
-                    <i class="input-group-text ft-search info" id="basic-addon1"></i>
-                    <input type="text" class="form-control" placeholder="Buscar por nombre..."
-                           [(ngModel)]="searchText"/>
-                </div>
+<!--                <div class="input-group-prepend">-->
+<!--                    <i class="input-group-text ft-search info" id="basic-addon1"></i>-->
+<!--                    <input type="text" class="form-control" placeholder="Buscar por nombre..."-->
+<!--                           [(ngModel)]="searchText"/>-->
+<!--                </div>-->
             </div>
             <div class="col-4">
                 <button class="btn btn-raised btn-primary float-right"
@@ -123,7 +123,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="card-block text-center">
-                                    <h4 class="card-title">{{participant.user.user.firstName}} {{participant.user.user.lastName}}</h4>
+                                    <h4 class="card-title">{{participant.user.name}}</h4>
                                     <p class="category text-gray font-small-4">{{participant.user.mail}}</p>
                                     <a class="btn btn-lg gradient-pomegranate font-small-2 white p-2 mr-2 btn-hoverable"
                                        (click)="expulsion(participant, modalToDisplay)">Expulsar
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div *ngIf="items.length === 0" class="card-block">
-                    <span class="display-block overflow-hidden">No se encontraron resultados.</span>
+<!--                    <span class="display-block overflow-hidden">No se encontraron resultados.</span>-->
                 </div>
             </div>
         </div>
