--- a/src/main/webapp/app/dashboard-admin/dashboard-admin.component.html
+++ b/src/main/webapp/app/dashboard-admin/dashboard-admin.component.html
@@ -5,11 +5,11 @@
             <div class="card-body">
                 <div class="card-block pt-2 pb-0">
                     <div class="media">
-                        <div class="media-body white text-left">
-                            <h3 class="font-large-1 mb-0"></h3>
+                        <div class="media-body white text-left" *ngIf="account">
+                            <h3 class="font-large-1 mb-0">₡{{account.balance}}</h3>
                             <span>Balance</span>
                         </div>
-                        <div class="media-body white text-left">
+                        <div class="media-body white text-left" *ngIf="!account">
                             <h3 class="font-large-1 mb-0">₡0</h3>
                             <span>Balance</span>
                         </div>
