--- a/src/main/webapp/app/entities/user-app/user-app.component.html
+++ b/src/main/webapp/app/entities/user-app/user-app.component.html
@@ -38,37 +38,39 @@
                             </thead>
                             <tbody>
                             <tr *ngFor="let userApp of userApps | filter:searchText; trackBy: trackId">
+                                <ng-container *ngIf="userApp.rol !== 'admin'">
+                                    <td>{{userApp.user?.login}}</td>
+                                    <td>{{userApp.name}}</td>
+                                    <td>{{userApp.identificationNumber}}</td>
+                                    <td>{{userApp.mail}}</td>
+                                    <td><p *ngIf="userApp.rol === 'institution'">Institución</p>
+                                        <p *ngIf="userApp.rol === 'participant'">Participante</p>
+                                        <p *ngIf="userApp.rol === 'subadmin'">Sub-administrador</p></td>
+                                    <td><p *ngIf="userApp.user.activated === true">Sí</p>
+                                        <p *ngIf="userApp.user.activated ===false">No</p></td>
+                                    <td>
+                                        <a class="info p-0" data-original-title="" title=""
+                                           [routerLink]="['/user-app', userApp.id, 'view' ]">
+                                            <i class="ft-eye font-medium-3 mr-2"></i>
+                                        </a>
+                                        <a class="success p-0" data-original-title="" title=""
+                                           [routerLink]="['/user-app', userApp.id, 'edit']">
+                                            <i class="ft-edit-2 font-medium-3 mr-2"></i>
+                                        </a>
+                                        <a class="danger p-0" data-original-title="" title=""
+                                           [routerLink]="['/', 'user-app', { outlets: { popup: userApp.id + '/delete'} }]"
+                                           replaceUrl="true"
+                                           queryParamsHandling="merge">
+                                            <i class="ft-x font-medium-3 mr-2"></i>
+                                        </a>
+                                    </td>
+                                </ng-container>
                                 <!--<td>
                                     <div class="custom-control custom-checkbox m-0">
                                         <input type="checkbox" class="custom-control-input" id="{{userApp.id}}">
                                         <label class="custom-control-label" for="{{userApp.id}}"></label>
                                     </div>
                                 </td>-->
-                                <td>{{userApp.user?.login}}</td>
-                                <td>{{userApp.name}}</td>
-                                <td>{{userApp.identificationNumber}}</td>
-                                <td>{{userApp.mail}}</td>
-                                <td><p *ngIf="userApp.rol === 'institution'">Institución</p>
-                                    <p *ngIf="userApp.rol === 'participant'">Participante</p>
-                                    <p *ngIf="userApp.rol === 'subadmin'">Sub-administrador</p></td>
-                                <td><p *ngIf="userApp.user.activated === true">Sí</p>
-                                    <p *ngIf="userApp.user.activated ===false">No</p></td>
-                                <td>
-                                    <a class="info p-0" data-original-title="" title=""
-                                       [routerLink]="['/user-app', userApp.id, 'view' ]">
-                                        <i class="ft-eye font-medium-3 mr-2"></i>
-                                    </a>
-                                    <a class="success p-0" data-original-title="" title=""
-                                       [routerLink]="['/user-app', userApp.id, 'edit']">
-                                        <i class="ft-edit-2 font-medium-3 mr-2"></i>
-                                    </a>
-                                    <a class="danger p-0" data-original-title="" title=""
-                                       [routerLink]="['/', 'user-app', { outlets: { popup: userApp.id + '/delete'} }]"
-                                       replaceUrl="true"
-                                       queryParamsHandling="merge">
-                                        <i class="ft-x font-medium-3 mr-2"></i>
-                                    </a>
-                                </td>
                             </tr>
                             </tbody>
                         </table>
