--- a/src/main/webapp/app/user-home/user-home.component.html
+++ b/src/main/webapp/app/user-home/user-home.component.html
@@ -44,7 +44,7 @@
 
         <div class="col-md-12 col-sm-12" *ngFor="let focusGroup of result">
             <!--<form [routerLink]="['/focus-group', focusGroup.id, 'view']">-->
-            <div class="card card-inverse bg-primary text-center gradient-blue-grey-blue" >
+            <div class="card card-inverse bg-primary text-center gradient-blue-grey-blue" *ngIf="showGroup(focusGroup)">
                 <div class="card-body">
                     <div class="card-block">
                         <div class="row">
